Testing all block \(without timer and digits\)

--- a/view/editor/assets/video_404.html
+++ b/view/editor/assets/video_404.html
@@ -4,8 +4,8 @@
     <title></title>
 </head>
 <body>        
-    <h1>Error 404!</h1>
-    <h2>Video stream not found</h2>
-    <h2>Please, edit "Video url"</h2>
+    <h1><?_t("Error 404!")?></h1>
+    <h2><?_t("Video stream not found")?></h2>
+    <h2><?_t("Please, edit 'Video url'")?></h2>
 </body>
 </html>
