refactor header.js, order.js, benefits.js, services.js

--- a/view/editor/assets/video_404.html
+++ b/view/editor/assets/video_404.html
@@ -1,11 +1,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title></title>
 </head>
 <body>        
-    <h1><?_t("Error 404!")?></h1>
-    <h2><?_t("Video stream not found")?></h2>
-    <h2><?_t("Please, edit 'Video url'")?></h2>
+    <h1>Error 404! File not found</h1>
+    <h2>Ошибка 404! Файл не найден</h2>
+    <br>
+    <h3>Please, edit field 'Video url'</h3>
+    <h4>Пожалуйста, отредактируйте поле 'Ссылка на видео'</h4>
 </body>
 </html>
