--- a/view/editor/style/style.css
+++ b/view/editor/style/style.css
@@ -116,6 +116,11 @@ ol li {
     padding: 5px 0;
 }
 
+/* add position: relative after publishing*/
+.item div:not([data-editor]) {
+    position: relative;
+}
+
 /* AlertifyJS dialog */
 .ajs-dialog {
   background: linear-gradient(to bottom, #fffefc, #e6e6e6) no-repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -495,10 +500,6 @@ ol li {
   margin-top: 16px;
 }
 
-.header_4 .container .span_btn {
-  margin-bottom: 10px;
-}
-
 .header_4 .container .span_btn .btn_wrap {
   display: inline-block;
   margin-top: 12px;
@@ -528,6 +529,18 @@ ol li {
 
 
 /* order */
+.container-fluid.order_1, .container-fluid.order_2 ,.container-fluid.order_6  {
+  background-position-x: 50% !important;
+  background-position-y: 0% !important;
+  background-size: cover !important;
+  background-repeat-x: no-repeat !important;
+  background-repeat-y: no-repeat !important;
+  background-attachment: initial !important;
+  background-origin: initial !important;
+  background-clip: initial !important;
+  background-color: initial !important;
+}
+
 .order .form {
   padding: 28px;
 }
@@ -884,7 +897,7 @@ ol li {
   color: #FFFFFF;
   font-size: 36px;
   line-height: 128%;
-  font-family: "Open Sans", "Arial";
+  font-family: "Open Sans SemiBold", "Arial";
   font-weight: 600;
   text-align: center;
 }
@@ -1032,7 +1045,7 @@ ol li {
   color: #FFF;
   font-size: 36px;
   line-height: 128%;
-  font-family: "Open Sans", "Arial";
+  font-family: "Open Sans SemiBold", "Arial";
   font-weight: 600;
   text-align: center;
 }
@@ -1071,10 +1084,6 @@ ol li {
   position: relative;
 }
 
-.order_5 .ico_list .item div {
-  position: relative;
-}
-
 .order_5 .ico_list .item .ico {
   background-position: center center;
   background-repeat: no-repeat;
@@ -1090,7 +1099,7 @@ ol li {
 
 .order_5 .ico_list .item .name {
   color: #fff;
-  font-family: "Open Sans", "Arial";
+  font-family: "Open Sans SemiBold", "Arial";
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 3px;
@@ -1293,7 +1302,7 @@ ol li {
   margin-top: 6px;
 }
 
-.form .form_data .form_fields input.form_field_text {
+.order_6 .form .form_data .form_fields input.form_field_text {
   height: 38px;
   padding: 0 7px;
 }
@@ -1467,12 +1476,8 @@ ol li {
   margin: 25px 0;
 }
 
-.benefits_2 .item_list .item div {
-  position: relative;
-}
-
 .benefits_2 .item_list .item .ico {
-  position: absolute !important;
+  position: absolute;
   top: -12px;
   left: -60px;
   width: 50px;
@@ -1544,10 +1549,6 @@ ol li {
   display: table-cell;
   width: 50%;
   padding: 40px 60px 40px 160px;
-}
-
-.benefits_3 .item_list .item div {
-  position: relative;
 }
 
 .benefits_3 .item_list .item:nth-child(even) {
@@ -4903,10 +4904,6 @@ ol li {
 
 .text_block_6 .ico_data .item_list .item {
   padding: 20px 0px 10px 110px;
-}
-
-.text_block_6 .ico_data .item_list .item div{
-  position: relative;  
 }
 
 .text_block_6 .ico_data .item_list .item .ico {
